--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Viewstl Javascript Plugin - Simple Example</title>
+    <title>Viewstl Javascript Plugin - Models Example</title>
+    <!-- bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Include from the CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
+
+    <!--jsPDF-->
+    <script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>
+
+    <!--css-->
+    <link rel="stylesheet" href="index.css" />
   </head>
 
   <body>
-    <div
-      id="stl_cont"
-      style="width: 500px; height: 500px; margin: 0 auto"
-    ></div>
+    <div id="stlCube" style="text-align: center">
+      <div id="cubeView1" class="row">
+        <p id="stl_contTop"></p>
+      </div>
+
+      <div id="cubeView2" class="row">
+        <p id="stl_contLeft" class="facet"></p>
+
+        <p id="stl_contFront" class="facet"></p>
+
+        <p id="stl_contRight" class="facet"></p>
+      </div>
+
+      <div id="cubeView3" class="row">
+        <p id="stl_contButton"></p>
+      </div>
+
+      <div id="cubeView4" class="row">
+        <p id="stl_contBack"></p>
+      </div>
+    </div>
 
     <script src="stl_viewer.min.js"></script>
     <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+
+    <button onclick="takeshot()">Take Screenshot</button>
+    <h1>Screenshot:</h1>
+    <div id="output"></div>
+
+    <button onclick="downloadPDF()">download as PDF</button>
   </body>
 </html>
