--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Viewstl Javascript Plugin - Models Example</title>
+    <title>STL Dissect</title>
     <!-- bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
