fixing display and adding US Letter sheet

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <input type="file" onchange="stlLoad(this)" accept="*.*" />
     </div>
 
-    <div id="stlCube" style="text-align: center; float: right">
+    <div id="stlCube">
       <div id="cubeView1" class="row">
         <p id="stl_contTop"></p>
       </div>
@@ -96,19 +96,14 @@
     <h4>
       This project is still in development, and we would love to hear your
       feedback to help us improve Dissect STL. Please consider taking a few
-      seconds to share your thoughts with us here.
+      seconds to share your thoughts with us
+      <a
+        href="https://docs.google.com/forms/d/e/1FAIpQLSeYNUQBWZ6mwz93AYiAC_8xTyTONAPHooyuic64Fyn88Wrcdw/viewform?usp=pp_url"
+      >
+        here</a
+      >.
     </h4>
-    <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLSf27W38Aj58L5yj5vmA_2l4HU_TRUnu1F0bf36LD4kQ_CM7vA/viewform?usp=pp_url"
-    >
-      Tell us what you think</a
-    >
-    <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLSeYNUQBWZ6mwz93AYiAC_8xTyTONAPHooyuic64Fyn88Wrcdw/viewform?usp=pp_url"
-    >
-      Show us what you have</a
-    >
 
-    <h4>Copyright 2021: Ian Gonsher, Tingyi Tan, and Damian Wei*</h4>
+    <h6>Copyright 2021: Ian Gonsher, Tingyi Tan, and Chuchuan Wei</h4>
   </footer>
 </html>
