--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>STL Dissect</title>
+    <title>Printer Form</title>
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -44,7 +44,8 @@
 
     <div style="float: left; height: 500px; border-style: ridge; margin: 20px">
       <div id="stl_contMain" style="width: 600px; height: 500px"></div>
-      <input type="file" onchange="stlLoad(this)" accept="*.*" />
+      <label for="lFile">Upload STL</label>
+      <input type="file" onchange="stlLoad(this)" accept="*.*">
     </div>
 
     <div id="stlCube" >
