--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
 
     <div id="desText" style="width: 40%; margin-left: 10px">
-      <h2>How to use Dissect STL</h2>
+      <h2>How to use PrinterForm</h2>
       <h5>
-        With nothing more than a common copy printer and STL Dissect, you can
+        With nothing more than a common copy printer and PrinterForm, you can
         produce high speed, low resolution printed objects. The process is
         simple.
       </h5>
@@ -106,7 +106,7 @@
     <h2>Tell us what you think</h2>
     <h4>
       This project is still in development, and we would love to hear your
-      feedback to help us improve Dissect STL. Please consider taking a few
+      feedback to help us improve PrinterForm. Please consider taking a few
       seconds to share your thoughts with us
       <a
         href="https://docs.google.com/forms/d/e/1FAIpQLSeYNUQBWZ6mwz93AYiAC_8xTyTONAPHooyuic64Fyn88Wrcdw/viewform?usp=pp_url"
