--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
 
     <!--css-->
     <link rel="stylesheet" href="index.css" />
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
   </head>
+
+
 
 
 
