--- a/selectForm.html
+++ b/selectForm.html
@@ -51,7 +51,8 @@
             <span> <b>Adjustable Dimision:</b> No</span><br>
             <span> <b>Annotations:</b> No</span><br>
             <span> <b>Fastener:</b> Staples or Tape</span><br>
-            
+            <span> <b>required/self-folding Instructions included:</b> Yes</span><br>
+
         </div>
         </a>
 
@@ -62,26 +63,30 @@
             <span> <b>Adjustable Dimision:</b> Height</span><br>
             <span> <b>Annotations:</b> Yes</span><br>
             <span> <b>Fastener:</b> Staples or Tape</span><br>
+            <span> <b>required/self-folding Instructions included:</b> Yes</span><br>
         </div>
         </a>
 
         <a href="curvedVolume.html" style = "color: black;">
         <div class="image">
-            <h3>Four Sided Cube</h3>
-            <img src="fiveSide_sample.jpg" />
+            <h3>Pyramid</h3>
+            <img src="Pyramid.png" />
             <span> <b>Adjustable Dimision:</b> Height</span><br>
             <span> <b>Annotations:</b> Yes</span><br>
             <span> <b>Fastener:</b> None</span><br>
+            <span> <b>required/self-folding Instructions included:</b> Yes</span><br>
+
         </div>
         </a>
 
         <a href="curvedVolume.html" style = "color: black;">
         <div class="image">
             <h3>Cylinder</h3>
-            <img src="fiveSide_sample.jpg" />
+            <img src="cone.png" />
             <span> <b>Adjustable Dimision:</b> Height</span><br>
             <span> <b>Annotations:</b> No</span><br>
             <span> <b>Fastener:</b> Staples or Tape</span><br>
+            <span> <b>required/self-folding Instructions included:</b> Yes</span><br>
         </div>
         </a>
     </div>
