--- a/index.html
+++ b/index.html
@@ -21,12 +21,6 @@
 
     <!--css-->
     <link rel="stylesheet" href="index.css" />
-    <div class="topnav">
-      <a class="active" href="index.html">Home</a>
-      <a href="selectForm.html">Select Form</a>
-      <a href="downloadPDF.html">Download PDF</a>
-      <a href="curvedVolume.html">Curved Volume</a>
-    </div>
   </head>
 
 
@@ -35,13 +29,19 @@
 
   <body onload="loadBasic()">
     <div id="intro" style="width: 40% float:center; margin-left: 10px">
-      <img src="logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
+      <img src="/Resource/logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
       <h4 style="width: 50%">
         What if you could make high speed, low-resolution 3D printed parts with
         no more hardware than a common paper printer? What if you could make a
         3D print in seconds rather than hours?
       </h4>
       
+    </div>
+
+    <div style="float: left; width: 500px; margin: 20px">
+      <h1><a href="uploadSTL.html">Upload</a></h1>
+      <h1><a class="active" href="selectForm.html">Select Form</a></h1>
+      <h1><a href="downloadPDF.html">Download PDF</a></h1>
     </div>
 
     <div id="saveResult" style="margin-left: 10px">
