--- a/selectForm.html
+++ b/selectForm.html
@@ -23,31 +23,25 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="selectForm.css" />
 
-
-    <div class="topnav">
-      <a href="index.html">Home</a>
-      <a class="active" href="selectForm.html">Select Form</a>
-      <a href="downloadPDF.html">Download PDF</a>
-      <a href="curvedVolume.html">Curved Volume</a>
-    </div>
   </head>
+  <div id="intro" style="width: 40% float:center; padding-left: 5px; background-color:#c35442; margin:10px;">
+    <img src="/Resource/logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
+  </div>
+
+<body>
 
 
-<body onload="loadBasic()">
-    <div id="intro" style="width: 40% float:center; margin-left: 10px">
-      <img src="logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
-      
+    <div style="float: left; width: 500px; margin: 20px">
+      <h1><a href="uploadSTL.html">Upload</a></h1>
+      <h1><a class="active" href="selectForm.html">Select Form</a></h1>
+      <h1><a href="downloadPDF.html">Download PDF</a></h1>
     </div>
 
-    <div style="float: left; height: 500px; border-style: ridge; margin: 20px">
-      <div id="stl_contMain" style="width: 600px; height: 500px"></div>
-    </div>
-
-    <div class="container">
+    <div class="container" style = "margin-right:20px; border-style: solid; border-color: #d58570; width:700px;">
         <a href="curvedVolume.html" style = "color: black;">
         <div class="image">
             <h3>Curved Volume</h3>
-            <img src="curved_sample.jpg" />
+            <img src="/Resource/curved_sample.jpg" />
             <span> <b>Adjustable Dimision:</b> No</span><br>
             <span> <b>Annotations:</b> No</span><br>
             <span> <b>Fastener:</b> Staples or Tape</span><br>
@@ -59,7 +53,7 @@
        <a href="curvedVolume.html" style = "color: black;">
         <div class="image">
             <h3>Five Sided Cube</h3>
-            <img src="fiveSide_sample.jpg" />
+            <img src="/Resource/fiveSide_sample.jpg" />
             <span> <b>Adjustable Dimision:</b> Height</span><br>
             <span> <b>Annotations:</b> Yes</span><br>
             <span> <b>Fastener:</b> Staples or Tape</span><br>
@@ -70,7 +64,7 @@
         <a href="curvedVolume.html" style = "color: black;">
         <div class="image">
             <h3>Pyramid</h3>
-            <img src="Pyramid.png" />
+            <img src="/Resource/Pyramid.png" />
             <span> <b>Adjustable Dimision:</b> Height</span><br>
             <span> <b>Annotations:</b> Yes</span><br>
             <span> <b>Fastener:</b> None</span><br>
@@ -82,7 +76,7 @@
         <a href="curvedVolume.html" style = "color: black;">
         <div class="image">
             <h3>Cylinder</h3>
-            <img src="cone.png" />
+            <img src="/Resource/cone.png" />
             <span> <b>Adjustable Dimision:</b> Height</span><br>
             <span> <b>Annotations:</b> No</span><br>
             <span> <b>Fastener:</b> Staples or Tape</span><br>
