--- a/uploadSTL.html
+++ b/uploadSTL.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
 
-  <div id="intro" style="width: 40% float:center; padding-left: 5px; background-color:#c35442; margin:10px;">
+  <div id="intro" style="width: 40% float:center; padding-left: 5px; border-top:soild #c35442; margin:10px;">
     <img src="/Resource/logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
   </div>
 
@@ -31,13 +31,8 @@
 
   <body onload="loadBasic()">
 
-    <h4 style="width: 50%">
-        What if you could make high speed, low-resolution 3D printed parts with
-        no more hardware than a common paper printer? What if you could make a
-        3D print in seconds rather than hours?
-      </h4>
-      
-    </div>
+
+
 
 
     <div style="float: left; width: 500px; margin: 20px">
@@ -58,9 +53,11 @@
     <!--<button onclick="splitSTL()">splitSTL</button>-->
 
 
-    <div id="desText" style="width: 40%; margin-left: 10px">
+    <div id="desText" style="width: 40%; margin-left: 10px; margin-top:300px;">
       <h2>How to use PrinterForm</h2>
-      <h5>
+          <h5 >
+        What if you could make high speed, low-resolution 3D printed parts with
+        no more hardware than a common paper printer? What if you could make a
         With nothing more than a common copy printer and PrinterForm, you can
         produce high speed, low resolution printed objects. The process is
         simple.
