--- a/selectForm.html
+++ b/selectForm.html
@@ -24,16 +24,17 @@
     <link rel="stylesheet" href="selectForm.css" />
 
   </head>
-  <div id="intro" style="width: 40% float:center; padding-left: 5px; background-color:#c35442; margin:10px;">
+  <div id="intro" style="width: 40% float:center; padding-left: 5px; border-top:soild #c35442; margin:10px;">
     <img src="/Resource/logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
   </div>
 
 <body>
 
 
-    <div style="float: left; width: 500px; margin: 20px">
+
+    <div style="float: left; width: 500px; margin: 20px; border-style: solid;">
       <h1><a href="uploadSTL.html">Upload</a></h1>
-      <h1><a class="active" href="selectForm.html">Select Form</a></h1>
+      <h1><a class="active"href="selectForm.html">Select Form</a></h1>
       <h1><a href="downloadPDF.html">Download PDF</a></h1>
     </div>
 
