--- a/uploadSTL.html
+++ b/uploadSTL.html
@@ -24,7 +24,7 @@
   </head>
 
   <div id="intro" style="width: 40% float:center; padding-left: 5px; border-top:soild #c35442; margin:10px;">
-    <img src="/Resource/logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
+    <img src="logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
   </div>
 
 
