--- a/curvedVolume.html
+++ b/curvedVolume.html
@@ -26,8 +26,8 @@
 
 
   </head>
-  <div id="intro" style="width: 40% float:center; padding-left: 5px; background-color:#c35442; margin:10px;">
-    <img src="/Resource/logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
+  <div id="intro">
+    <img src="logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
   </div>
 
 <body >
@@ -38,9 +38,6 @@
       <h1><a href="selectForm.html">Select Form</a></h1>
       <h1><a class="active" href="downloadPDF.html">Download PDF</a></h1>
       <div id="saveResult" style="margin-left: 10px">
-        <h1>Preview:</h1>
-        <button onclick="takeshot()">Preview PDF</button>
-
         <button id="saveResultB" onclick="downloadPDF()">Download as PDF</button>
       </div>
     </div>
@@ -48,7 +45,7 @@
 
     <div  class="image overlay" style = "width:700px; float: right">
 
-        <img id = "bottom"  src="/Resource/CURVED_FORM_TEMPLATE.jpg" style = "width:700px;"/>
+        <img id = "bottom"  src="CURVED_FORM_TEMPLATE.jpg" style = "width:700px;"/>
 
     </div>
 
