--- a/selectForm.html
+++ b/selectForm.html
@@ -24,25 +24,25 @@
     <link rel="stylesheet" href="selectForm.css" />
 
   </head>
-  <div id="intro" style="width: 40% float:center; padding-left: 5px; border-top:soild #c35442; margin:10px;">
-    <img src="/Resource/logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
+  <div id="intro">
+    <img src="logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
   </div>
 
 <body>
 
 
 
-    <div style="float: left; width: 500px; margin: 20px; border-style: solid;">
+    <div id = "navBarLeft">
       <h1><a href="uploadSTL.html">Upload</a></h1>
       <h1><a class="active"href="selectForm.html">Select Form</a></h1>
       <h1><a href="downloadPDF.html">Download PDF</a></h1>
     </div>
 
-    <div class="container" style = "margin-right:20px; border-style: solid; border-color: #d58570; width:700px;">
+    <div class="container" >
         <a href="curvedVolume.html" style = "color: black;">
         <div class="image">
             <h3>Curved Volume</h3>
-            <img src="/Resource/curved_sample.jpg" />
+            <img src="curved_sample.jpg" />
             <span> <b>Adjustable Dimision:</b> No</span><br>
             <span> <b>Annotations:</b> No</span><br>
             <span> <b>Fastener:</b> Staples or Tape</span><br>
@@ -53,8 +53,8 @@
 
        <a href="curvedVolume.html" style = "color: black;">
         <div class="image">
-            <h3>Five Sided Cube</h3>
-            <img src="/Resource/fiveSide_sample.jpg" />
+            <h3>Four Sided Cube</h3>
+            <img src="fourSideCubeBunny.jpg" />
             <span> <b>Adjustable Dimision:</b> Height</span><br>
             <span> <b>Annotations:</b> Yes</span><br>
             <span> <b>Fastener:</b> Staples or Tape</span><br>
@@ -65,7 +65,7 @@
         <a href="curvedVolume.html" style = "color: black;">
         <div class="image">
             <h3>Pyramid</h3>
-            <img src="/Resource/Pyramid.png" />
+            <img src="Pyramid.png" />
             <span> <b>Adjustable Dimision:</b> Height</span><br>
             <span> <b>Annotations:</b> Yes</span><br>
             <span> <b>Fastener:</b> None</span><br>
@@ -77,7 +77,7 @@
         <a href="curvedVolume.html" style = "color: black;">
         <div class="image">
             <h3>Cylinder</h3>
-            <img src="/Resource/cone.png" />
+            <img src="cone.png" />
             <span> <b>Adjustable Dimision:</b> Height</span><br>
             <span> <b>Annotations:</b> No</span><br>
             <span> <b>Fastener:</b> Staples or Tape</span><br>
