change to upload STL

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div id = "navBarLeft">
       <h1><a class="active"href="index.html">Select Form</a></h1>
-      <h1 onclick="alertSelect()"><a>Upload File</a></h1>
+      <h1 onclick="alertSelect()"><a>Upload STL</a></h1>
       <h1 onclick="alertSelect()"> <a>Download PDF<a/></h1>
 
     <script>
