--- a/fourSide.html
+++ b/fourSide.html
@@ -35,7 +35,7 @@
 
     <div id = "navBarLeft" style="float: left; width: 500px; height:700px; margin: 20px">
       <h1><a id = "formLink" href="index.html">Select Form</a></h1>
-      <h1><a id = "uploadLink" class="active" onclick="uploadFile()" >Upload File</a></h1>
+      <h1><a id = "uploadLink" class="active" onclick="uploadFile()" >Upload STL</a></h1>
       <h1><a id = "downloadLink" onclick = "screenShot()">Download PDF</a></h1>
       
 
