adjust annotation text

--- a/curvedVolume.html
+++ b/curvedVolume.html
@@ -75,7 +75,7 @@
 
 
     <div class="overlay" id = "annoDisplay" style = "float: right;">
-      <p id = "annoDisplayText">This is the annotation</p>
+      <p id = "annoDisplayText"></p>
             
     </div>
   </div>
@@ -87,7 +87,12 @@
 
 
 
+<div id = "text">
+<p>Remember to rotate the STL file so that the bottom of the STL touches the borders of the page before printing.</p>
 
+<p>Once you have printed the PDF, roll edges into cone until lines align and matching dots overlap. Staple.
+</p>
+</div>
 
 
  <script src="stl_viewer.min.js" ></script>
