--- a/curvedVolume.html
+++ b/curvedVolume.html
@@ -53,11 +53,9 @@
         </div>
 
 
-    <div id = "instructions">
-      <p>Remember to rotate the STL file so that the bottom of the STL touches the borders of the page before printing.</p>
-
-      <p>Once you have printed the PDF, roll edges into cone until lines align and matching dots overlap. Staple.</p>
-    </div>
+        <div id = "instructions">
+            <p>It may be nesscery to rotate the STL file so that the bottom of the STL touches the borders of the page before printing. Once you have printed the PDF, roll edges into cone until lines align and matching dots overlap. Staple.</p>
+        </div>
   </div>
     
 
@@ -111,7 +109,7 @@
       >.
     </h4>
 
-    <h6>Copyright 2021: Ian Gonsher, Tingyi Tan, and Chuchuan Wei</h4>
+    <h6>Copyright 2021: Ian Gonsher, Tingyi Tan</h4>
   </footer>
 <div id = "output"></div>
     <input type="file" id="lFile" name="lFile" onchange="stlLoad(this)" placeholder="Upload" accept="*.*"> 
