--- a/fourSide.html
+++ b/fourSide.html
@@ -83,9 +83,7 @@
         </div>
 
         <div id = "instructions">
-            <p>Remember to rotate the STL file so that the bottom of the STL touches the borders of the page before printing.</p>
-
-            <p>Once you have printed the PDF, roll edges into cone until lines align and matching dots overlap. Staple.</p>
+            <p>It may be nesscery to rotate the STL file so that the bottom of the STL touches the borders of the page before printing. Once you have printed the PDF, roll edges into cone until lines align and matching dots overlap. Staple.</p>
         </div>
     </div>
     
