--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
         <div class="image">
             <h3>Curved Volume</h3>
             <img src="curved_sample.jpg" />
-            <span> <b>Adjustable Dimision:</b> No</span><br>
-            <span> <b>Annotations:</b> No</span><br>
+            <span> <b>Adjustable Dimision:</b> Angle</span><br>
+            <span> <b>Annotations:</b> Yes</span><br>
             <span> <b>Fastener:</b> Staples or Tape</span><br>
-            <span> <b>required/self-folding Instructions included:</b> Yes</span><br>
 
         </div>
         </a>
@@ -63,8 +62,7 @@
             <img src="fourSideCubeBunny.jpg" />
             <span> <b>Adjustable Dimision:</b> Height</span><br>
             <span> <b>Annotations:</b> Yes</span><br>
-            <span> <b>Fastener:</b> Staples or Tape</span><br>
-            <span> <b>required/self-folding Instructions included:</b> Yes</span><br>
+            <span> <b>Fastener:</b> Not Required</span><br>
         </div>
         </a>
 
