--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   </head>
   <div id="intro">
-    <img src="logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;">
+   <a  href="index.html"><img src="logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;"></a>
   </div>
 
 <body>
