Adjusting border with drags

--- a/curvedVolume.html
+++ b/curvedVolume.html
@@ -5,6 +5,7 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- bootstrap -->
     <script
@@ -65,6 +66,7 @@
 <div id="printPreview" >
     <img id = "bottom"  src="CURVED_FORM_TEMPLATE.jpg"/>
 
+    <p id = "annoDisplay"></p>
 
     <div  id="top" >
 
@@ -72,13 +74,10 @@
     </div>
 
     <div  id="top2" >
-      <div id="stl_contButton" style = "top:400px;"></div>
+      <div id="stl_contButton" ></div>
     </div>
 
-    <div class="overlay" id = "annoDisplay" style = "float: right;">
-      <p id = "annoDisplayText"></p>
-            
-    </div>
+
   </div>
 
   <div id = "dummyDisplay" style="float: right; height: 500px; border-style: ridge; margin: 20px; left:50%;" class="overlay">
