--- a/index.html
+++ b/index.html
@@ -114,6 +114,6 @@
       >.
     </h4>
 
-    <h6>Copyright 2021: Ian Gonsher, Tingyi Tan, and Chuchuan Wei</h4>
+    <h6>Copyright 2021: Ian Gonsher, Tingyi Tan</h4>
   </footer>
 </html>
